--- a/styles-local.html
+++ b/styles-local.html
@@ -20,11 +20,21 @@ body {
 
 h1.title {
 	font-family: Palatino, serif;
+	padding-top: 16px;
+	padding-bottom: 0px;
 	font-size:   4.75rem;
 	margin: auto;
 	color: antiquewhite;
 	text-shadow: 0px 0px 10px black;
+}
 
+h2.title {
+	font-family: Palatino, serif;
+	padding-top: 0px;
+	font-size:   3.5rem;
+	margin: auto;
+	color: antiquewhite;
+	text-shadow: 0px 0px 10px black;
 }
 
 input[type="checkbox"] {
@@ -41,7 +51,7 @@ input[type="checkbox"] {
 	padding-right: 10px;
 	padding-bottom: 10px;
 	box-sizing: border-box;
-	margin-top: 50px;
+	margin-top: 60px;
 	overflow-x: auto;
 	overflow-y: hidden;
 	position: sticky;
@@ -106,7 +116,7 @@ table.opera td.period {
 }
 
 
-table.opera th.work-title, table.opera td.work-title {
+table.opera th.opera-title, table.opera td.opera-title {
 	min-width: 200px;
 }
 
@@ -118,14 +128,13 @@ table.opera th.dedicatee, table.opera td.dedicatee {
 
 input, select {
 	border: 1px solid antiquewhite;
-	max-width: 350px;
-	font-size: 1.75rem;
+	max-width: 325px;
+	font-size: 1.65rem;
 	margin: 3px;
 	padding: 5px;
 	color: antiquewhite;
 	/* background: rgba(53, 26, 10, 1.0); #351a0a with opacity */
 	background: black;
-	opacity: 0.95;
 }
 
 
@@ -170,10 +179,9 @@ option.first {
 
 
 #search-fields {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: l00px !important;
-	margin-right: 100px !important;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin: auto;
 	width: 100%;
 	padding: 10px;
 	/* border: 1px solid black; */
@@ -268,7 +276,7 @@ a, a:visited, a:hover, a:active, a:focus {
 	font-family: Tahoma, sans-serif;
 	font-size: 2.25rem;
 	font-weight: bold;
-	top: 20px;
+	top: 114px;
 	left: 35px;
 	width: 40px;
 	height: 40px;
