--- a/styles-local.html
+++ b/styles-local.html
@@ -88,6 +88,18 @@ table.opera th {
 }
 
 
+table.opera td.score, 
+table.opera.th.score {
+	max-width: 150px;
+}
+
+
+table.opera td.theater,
+table.opera th.theater {
+	min-width: 170px;
+}
+
+
 table.opera td {
 	padding-right: 3px;
 	padding-left: 3px;
