Add styling for chrome on Windows.

--- a/styles-local.html
+++ b/styles-local.html
@@ -181,9 +181,15 @@ input::placeholder {
 
 
 option.rest {
-	/* background: navy; */
 	opacity: 1.0;
-	color: antiquewhite;
+	color: black;
+	background-color: antiquewhite;
+}
+
+
+select, select option {
+	color: black;
+	background-color: antiquewhite;
 }
 
 
